Added a recently viewed, some basic movie info on click and updated the design

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,33 @@
 body {
   background: #141414;
-  color: #ffff;
+  color: #ffffff;
 }
 
-.movie-app > .row {
-  overflow-x: auto;
-  flex-wrap: nowrap;
+.block {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+img {
+  width: 300px;
+}
+.inline-view {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.image-container {
+  position: relative;
+  transition: transform 0.2s;
 }
 
-img{
-    max-width: 300px;
+.image-container:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.image-container:hover .overlay {
+  opacity: 1;
 }
